<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TesteOuvido">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/DescricaoJogo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/_txtDescription"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/btnPlaySound"
                        android:layout_marginBottom="20sp"
                        android:layout_width="0dp"
                        android:onClick="tocarSom"
                        android:layout_height="wrap_content" android:id="@+id/_btnPlaySound" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/selectNote"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <CheckBox
                        android:text="@string/button_E"
                        android:onClick="onCheckBoxClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/_btnRadioMiAgudo"
                        android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/button_B"
                        android:onClick="onCheckBoxClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/_btnRadioSi" android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/button_G"
                        android:onClick="onCheckBoxClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/_btnRadioSol" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20sp">
                <CheckBox
                        android:text="@string/button_D"
                        android:layout_width="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:layout_height="wrap_content" android:id="@+id/_btnRadioRe" android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/button_A"
                        android:onClick="onCheckBoxClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/_btnRadioLa" android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/radioButtonMIGrave"
                        android:onClick="onCheckBoxClicked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/_btnRadioMiGrave"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="80sp">
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edtNome" android:layout_weight="1" android:hint="@string/txtNameLabel"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/labelPontos"
                        android:textSize="24sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"/>
                <TextView
                        android:text="@string/emptyTxt"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/_txtViewPontos" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:layout_weight="1"
                    android:layout_marginTop="40sp">
                <Button
                        android:text="@string/addPontos"
                        android:onClick="salvarJogo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"/>
                <Button
                        android:text="@string/cancelJogo"
                        android:onClick="cancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>