<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_launcher_background_guitar"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/button_EM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="372dp"
                    tools:layout_editor_absoluteX="27dp" android:id="@+id/_btnMiSound"
                    android:onClick="onClickStringButton" android:layout_weight="1"
                    style="@android:style/Widget.Button"/>
            <Button
                    android:text="@string/button_E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="372dp"
                    tools:layout_editor_absoluteX="238dp" android:id="@+id/MiAgudoButton"
                    android:onClick="onClickStringButton" android:layout_weight="1"
                    style="@android:style/Widget.Button"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/button_D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="207dp"
                    tools:layout_editor_absoluteX="27dp" android:id="@+id/_btnReSound"
                    android:onClick="onClickStringButton" android:layout_weight="1"
                    style="@android:style/Widget.Button"/>
            <Button
                    android:text="@string/button_G"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="207dp"
                    tools:layout_editor_absoluteX="238dp" android:id="@+id/_btnSolSound"
                    android:onClick="onClickStringButton" android:layout_weight="1"
                    style="@android:style/Widget.Button"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/button_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="292dp"
                    tools:layout_editor_absoluteX="27dp" android:id="@+id/_btnLaSound"
                    android:onClick="onClickStringButton" android:layout_weight="1"
                    style="@android:style/Widget.Button"/>
            <Button
                    android:text="@string/button_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="292dp"
                    tools:layout_editor_absoluteX="238dp" android:id="@+id/SiButton"
                    android:onClick="onClickStringButton"
                    android:layout_weight="1" style="@android:style/Widget.Button"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/swtRepeat">
            <Switch
                    android:text="Repetir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/swtRepeatSound" android:layout_weight="1"
                    android:padding="10dp" android:onClick="repetirSom"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/layoutOuvidoAbs" android:layout_marginTop="20dp">
            <TextView
                    android:text="@string/txtViewOuvidoAbs"
                    android:id="@+id/textView" android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat" android:layout_height="wrap_content"
                    android:layout_width="0dp" android:padding="10dp"/>
            <Button
                    android:text="@string/btnGoPlay"
                    android:layout_height="wrap_content" android:id="@+id/button2" android:layout_weight="1"
                    android:layout_width="0dp" android:background="@android:color/holo_blue_light"
                    tools:textColor="@android:color/background_light" android:onClick="testarOuvidoAbsButton"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:baselineAligned="false"
                android:layout_height="0dp" android:layout_weight="1">
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/_dynamicList"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>